--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,33 +1,39 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Events</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Start time</th>
-      <th>End time</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @events.each do |event| %>
+<div class="table-responsive">
+  <table class="table">
+    <thead>
       <tr>
-        <td><%= event.title %></td>
-        <td><%= event.description %></td>
-        <td><%= event.start_time %></td>
-        <td><%= event.end_time %></td>
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Title</th>
+        <th>Description</th>
+        <th>Start time</th>
+        <th>End time</th>
+        <th colspan="3">Options</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
+    <tbody>
+      <% @events.each do |event| %>
+        <tr>
+          <td><%= event.title %></td>
+          <td><%= event.description %></td>
+          <td><%= event.start_time.strftime("%F %T") %></td>
+          <td><%= event.end_time.strftime("%F %T") %></td>
+          <td><%= link_to 'Show', event, class: 'btn btn btn-primary' %></td>
+          <td><%= link_to 'Edit', edit_event_path(event), class: 'btn btn btn-primary' %></td>
+          <td><%= link_to 'Destroy', event, class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<%= link_to 'New Event', new_event_path, class: 'btn btn btn-primary' %>
+  <br>
+</div>
 <br>
+<div id='calendar'>
 
-<%= link_to 'New Event', new_event_path %>
+</div>
+
+
+
