--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,25 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
+        <script type="text/javascript">
+          $(document).ready(function() {
+
+            // page is now ready, initialize the calendar...
+            
+
+            $('#calendar').fullCalendar({
+                // put your options and callbacks here
+                events: '/events.json'
+            })
+
+        });
+          </script>
+
+<link rel="https://stylesheet" href="cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.3.2/fullcalendar.print.css">
+
+<link rel="https://stylesheet" href="cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.3.2/fullcalendar.min.css">
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.3.2/fullcalendar.min.js"></script>
   </head>
   <body>
     <header>
